{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 11,
  "lineage": "50c334d7-b339-b270-3931-d455dcf8b397",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terraform_Ec2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ba48996007c8b50",
            "arn": "arn:aws:ec2:ap-south-1:359214412828:instance/i-0b28ebad7d9dda2d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b28ebad7d9dda2d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxredhatkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0314a72d5ca7a35b4",
            "private_dns": "ip-10-0-1-27.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.27",
            "public_ip": "13.233.94.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4274ff6c76214c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d57cc582c9ced091",
            "tags": {
              "Name": "Dev-Terraform_Ec2_server"
            },
            "tags_all": {
              "Name": "Dev-Terraform_Ec2_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa55b9114a48ec45"
            ]
          },
          "dependencies": [
            "aws_security_group.Terraform_SG",
            "aws_subnet.public_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:internet-gateway/igw-0abb0c0b91d6133f2",
            "id": "igw-0abb0c0b91d6133f2",
            "owner_id": "359214412828",
            "tags": {
              "Name": "Dev-my_igw"
            },
            "tags_all": {
              "Name": "Dev-my_igw"
            },
            "vpc_id": "vpc-0cb707d0d25a7e64f"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:route-table/rtb-0e7e7c359b3a04f09",
            "id": "rtb-0e7e7c359b3a04f09",
            "owner_id": "359214412828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abb0c0b91d6133f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-private_routing_table"
            },
            "tags_all": {
              "Name": "Dev-private_routing_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb707d0d25a7e64f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:route-table/rtb-04e467e1c3d590329",
            "id": "rtb-04e467e1c3d590329",
            "owner_id": "359214412828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abb0c0b91d6133f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-public_routing_table"
            },
            "tags_all": {
              "Name": "Dev-public_routing_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb707d0d25a7e64f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b20bb6c0497b8e33",
            "route_table_id": "rtb-04e467e1c3d590329",
            "subnet_id": "subnet-0d57cc582c9ced091"
          },
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_route_table.public_routing_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078af07dfc58e5bdc",
            "route_table_id": "rtb-0e7e7c359b3a04f09",
            "subnet_id": "subnet-02902ed70188c9469"
          },
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_route_table.private_routing_table",
            "aws_subnet.private_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Terraform_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:security-group/sg-0fa55b9114a48ec45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa55b9114a48ec45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Terraform_SG",
            "name_prefix": "",
            "owner_id": "359214412828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-Terraform_SG"
            },
            "tags_all": {
              "Name": "Dev-Terraform_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb707d0d25a7e64f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:subnet/subnet-02902ed70188c9469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02902ed70188c9469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359214412828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-private_subnet"
            },
            "tags_all": {
              "Name": "Dev-private_subnet"
            },
            "vpc_id": "vpc-0cb707d0d25a7e64f"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:subnet/subnet-0d57cc582c9ced091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d57cc582c9ced091",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359214412828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-public_subnet"
            },
            "tags_all": {
              "Name": "Dev-public_subnet"
            },
            "vpc_id": "vpc-0cb707d0d25a7e64f"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359214412828:vpc/vpc-0cb707d0d25a7e64f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05eeaddb407eefb65",
            "default_route_table_id": "rtb-0ab594a706a27eca9",
            "default_security_group_id": "sg-03ce14a3df567e059",
            "dhcp_options_id": "dopt-0f2dd7ecf9bcb4927",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb707d0d25a7e64f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab594a706a27eca9",
            "owner_id": "359214412828",
            "tags": {
              "Name": "Dev-Terraform_vpc"
            },
            "tags_all": {
              "Name": "Dev-Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}